--- a/Leocr-product-detail/assets/main.css
+++ b/Leocr-product-detail/assets/main.css
@@ -32,6 +32,10 @@
     margin-top: 60px;
 }
 
+.mt-20 {
+    margin-top: 20px;
+}
+
 .mt90 {
     margin-top: 90px;
 }
@@ -39,6 +43,11 @@
 .mb-5 {
     margin-bottom: 5px;
 }
+
+.mb-60 {
+    margin-bottom: 60px;
+}
+
 
 .mt-12 {
     margin-top: 12px;
@@ -280,4 +289,59 @@
 .san-pham-ban-chay {
     flex: 1;
     /* background-color: #ccc; */
+}
+
+.comment-va-like {
+    height: 500px;
+    background-color: #ccc;
+}
+
+
+.danh-muc-lien-quan {
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    max-height: 350px;
+    overflow: hidden;
+}
+
+.danh-muc-lien-quan__item {
+    width: 18.5%;
+    margin: 10px;
+}
+
+.danh-muc-lien-quan__anh {
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+}
+
+.danh-muc-lien-quan__anh img {
+    width: 250px;
+}
+
+.thong-tin-danh-muc-lien-quan {
+    padding: 5px;
+}
+
+.danh-gia-san-pham-lien-quan {
+    margin-top: 5px;
+    font-size: 12px;
+    opacity: 0.7;
+}
+
+.danh-gia-san-pham-lien-quan i {
+    opacity: 1;
+}
+
+.gia-goc-san-pham-lien-quan {
+    opacity: 0.8;
+    text-decoration: line-through;
+    text-align: right;
+    font-size: 15px;
+}
+
+.gia-uu-dai-san-pham-lien-quan {
+    text-align: right;
+    font-size: 20px;
 }
