--- a/web/assets/css/DAstyle.css
+++ b/web/assets/css/DAstyle.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 body{
-  background-color: #e1efe4;
+  background-color: #f2f7f4;
   font-family: Arial, Helvetica, sans-serif;
 }
 .ten-div{
@@ -74,5 +74,32 @@ body{
 color: rgb(234, 95, 95);
 }
 .blue{
-color: rgb(62, 62, 98);
+color: rgb(91, 190, 244);
+}
+.chart-content{
+  width: 80%;
+  margin: auto;
+ 
+}
+.bieu-do-trai{  
+  margin-top: 50px;
+  padding: 8px;
+  width: 45%;
+  float: left;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 1px 3px 2px 3px #a2b1a6;
+}
+.bieu-do-phai{ 
+  margin-top: 50px;
+  padding: 8px;
+  width: 45%;
+  float: right;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 1px 3px 2px 3px #a2b1a6;
+}
+.chart{
+ 
+  margin-top: 30px;
 }
