--- a/web/assets/css/DAstyle.css
+++ b/web/assets/css/DAstyle.css
@@ -36,11 +36,13 @@ body{
   width: 20%;
   font-size: 36px;
   border-radius: 8px;
+  
 }
 .icon-tk{
   width: 50%;
   height: 100%;
   float: left;
+  
 }
 .ten-tk{
   width: 50%;
@@ -61,7 +63,7 @@ body{
 .full{
   text-align: center;
   font-size: 60px;
-  
+  font-weight: 700;
 }
 .violet{
   color:#c5c0f7;
